Footer bug fix - footer covered other elements made them uncliclble

--- a/src/app/cmps/header/header.component.scss
+++ b/src/app/cmps/header/header.component.scss
@@ -1,5 +1,6 @@
 @media (max-width: 3000px){
   .header{
+    height: 10vh;
     background-color: #fff;
     border-color: #f1f6ed;
     box-shadow: 0 2px 2px rgb(0 0 0 / 20%);
